--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         codeUrl: buildUrl + "/Build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "TennisVR_WebGL",
+          productName: "MultiTaskingGame",
         productVersion: "0.1",
       };
       
